--- a/bharat_ddn/views/property_views.xml
+++ b/bharat_ddn/views/property_views.xml
@@ -18,7 +18,6 @@
                     <field name="property_no" optional="hide"/>
                     <field name="plot_no" optional="hide"/>
                     <field name="bill_no" optional="hide"/>
-                    <field name="property_description" optional="show"/>
                     <field name="plot_area" optional="hide"/>
                     <field name="toilet_no" optional="hide"/>
                     <field name="plot_taxable_area_sqft" optional="hide"/>
@@ -144,7 +143,6 @@
                             </group>
                         </group>
                         <group>
-                            <field name="property_description"/>
                         </group>
 
                         <notebook>
@@ -192,13 +190,23 @@
                                                 <div class="row">
                                                     <div class="col">
                                                         <field name="property_image" widget="image" optional="show" 
-                                                                        style="max-width: 100px; max-height: 100px;"/>
+                                                                        style="max-width: 100px; max-height: 100px;" invisible="image1_s3_url"/>
                                                     </div>
                                                     <div class="col">
                                                         <field name="property_image1" widget="image" optional="show" 
-                                                            style="max-width: 100px; max-height: 100px;"/>
+                                                            style="max-width: 100px; max-height: 100px;" invisible="image2_s3_url"/>
                                                     </div>
                                                 </div>
+                                            </group>
+
+                                            <group>
+                                                <group>
+                                                    <field name="image1_s3_url" widget="url"/>
+                                                </group>
+                                                <group>
+                                                    <field name="image2_s3_url" widget="url"/>
+                                                </group>
+                                                <button name="action_upload_all_images" type="object" string="Upload to S3" class="btn-primary" invisible="image2_s3_url and image2_s3_url"/>
                                             </group>
                                         </sheet>
                                     </form>
@@ -310,7 +318,6 @@
                     <field name="ward_id"/>
                     <field name="property_status"/>
                     <field name="owner_name"/>
-                    <field name="property_description"/>
                     <field name="latitude"/>
                     <field name="longitude"/>
                     <field name="property_type"/>
