--- a/bharat_ddn/views/property_survey_views.xml
+++ b/bharat_ddn/views/property_survey_views.xml
@@ -29,22 +29,40 @@
                             <group>
                                 <field name="property_id"/>
                                 <field name="survey_date" string="Survey Date Time"/>
-                                <field name="address_line_1"/>
-                                <field name="address_line_2"/>
-                                <field name="unit"/>
-                                <field name="total_floors"/>
-                                <field name="floor_number"/>
-                                <field name="owner_name"/>
                             </group>
                             <group>
+                                <field name="owner_name"/>
                                 <field name="father_name"/>
+                            </group>
+                        </group>
+                        <group>
+                            <group>
+                                <field name="address_line_1"/>
+                                <field name="address_line_2"/>
+                                <field name="is_solar"/>
+                                <field name="is_rainwater_harvesting"/>
+                            </group>
+                            <group>
+                                <field name="unit"/>
+                                <field name="floor_number"/>
+                                <field name="total_floors"/>
+                            </group>
+                        </group>
+                        <group>
+                            <group>
                                 <field name="area"/>
                                 <field name="longitude"/>
                                 <field name="latitude"/>
-                                <field name="surveyer_id"/>
-                                <field name="installer_id"/>
+                            </group>
+                            <group>
                                 <field name="mobile_no"/>
                                 <field name="company_id" options="{'no_create_edit':True, 'no_create':True, 'no_open':True}"/>
+                            </group>
+                        </group>
+                        <group string="Survey Team">
+                            <group>
+                                <field name="surveyer_id"/>
+                                <field name="installer_id"/>
                             </group>
                         </group>
                         <group string="Property Images">
@@ -55,7 +73,7 @@
                                 <field name="property_image1" widget="image" class="oe_avatar" string="Property Image1"/>
                             </group>
                         </group>
-                        <group>
+                        <group string="Image URLs">
                             <group>
                                 <field name="image1_s3_url" widget="url"/>
                             </group>
