--- a/bharat_ddn/views/property_views.xml
+++ b/bharat_ddn/views/property_views.xml
@@ -15,7 +15,7 @@
                     <field name="ward_id" optional="show"/>
                     <field name="colony_id" optional="show"/>
                     <field name="property_type" optional="show"/>
-                    <field name="property_no" optional="hide"/>
+                    <field name="property_id" optional="show"/>
                     <field name="plot_no" optional="hide"/>
                     <field name="bill_no" optional="hide"/>
                     <field name="plot_area" optional="hide"/>
@@ -139,7 +139,7 @@
                                 <field name="company_id"/>
                                 <field name="address_line_1"/>
                                 <field name="address_line_2"/>
-                                <field name="property_no"/>
+                                <field name="property_id"/>
                             </group>
                         </group>
                         <group>
@@ -236,7 +236,7 @@
                             <page string="Other Info">
                                 <group>
                                     <group>
-                                        <field name="property_no"/>
+                                        <field name="property_id"/>
                                         <field name="partition_no"/>
                                         <field name="city_survey_no"/>
                                         <field name="plot_no"/>
