--- a/bharat_ddn/views/services_views.xml
+++ b/bharat_ddn/views/services_views.xml
@@ -16,6 +16,10 @@
         <field name="arch" type="xml">
             <list>
                 <field name="name"/>
+                <field name="header"/>
+                <field name="header2"/>
+                <field name="sub_header"/>
+                <field name="company_id"/>
             </list>
         </field>
     </record>
@@ -29,6 +33,10 @@
             <sheet>
                 <group>
                     <field name="name"/>
+                    <field name="header"/>
+                    <field name="header2"/>
+                    <field name="sub_header"/>
+                    <field name="company_id"/>
                 </group>
             </sheet>
 
@@ -38,18 +46,18 @@
                 <field name="govt_line_ids">
                     <list>
                         <field name="name"/>
+                        <field name="icon"/>
                         <field name="text"/>
                         <field name="hyperlink"/>
-                        <field name="icon"/>
                         <field name="is_global"/>
                         <field name="is_active"/>
                     </list>
                     <form>
                         <group>
                             <field name="name"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="is_active"/>
                         </group>
@@ -63,9 +71,9 @@
                     <field name="tracking_line_ids">
                         <list>
                             <field name="name"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="is_active"/>
                         </list>
@@ -73,11 +81,11 @@
                             <group>
                                 <group>
                                     <field name="name"/>
-                                    <field name="text"/>
+                                    <field name="icon"/>
                                     <field name="hyperlink"/>
                                 </group>
                                 <group>
-                                    <field name="icon"/>
+                                    <field name="text"/>
                                     <field name="is_global"/>
                                     <field name="is_active"/>
                                 </group>
@@ -90,31 +98,34 @@
                 <page string="Know Officer Services">
                     <field name="know_officer_line_ids">
                         <list>
+                            <field name="header"/>
                             <field name="name"/>
+                            <field name="mobile"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="company_id"/>
                             <field name="zone_id"/>
-
                             <field name="ward_id" domain="[('zone_id','=',zone_id)]"/>
-                            <field name="is_active"/>
+                            <field name="is_active" default="1"/>
                         </list>
                         <form>
                             <group>
                                 <group>
+                                    <field name="header"/>
                                     <field name="name"/>
+                                    <field name="mobile"/>
+                                    <field name="icon"/>
                                     <field name="text"/>
                                     <field name="hyperlink"/>
                                     <field name="company_id"/>
-                                    <field name="zone_id" domain="[('company_id','=',company_id)]"/>
-                                    <field name="ward_id" domain="[('zone_id','=',zone_id),('company_id','=',company_id)]"/>
+                                    <field name="zone_id" domain="[('company_id','=',company_id)]" invisible="is_global" options="{'no_create':True, 'no_create_edit':True}"/>
+                                    <field name="ward_id" domain="[('zone_id','=',zone_id),('company_id','=',company_id)]" invisible="is_global" options="{'no_create':True, 'no_create_edit':True}"/>
                                 </group>
                                 <group>
-                                    <field name="icon"/>
                                     <field name="is_global"/>
-                                    <field name="is_active"/>
+                                    <field name="is_active" default="1"/>
                                 </group>
                             </group>
                         </form>
@@ -126,9 +137,10 @@
                     <field name="dial_line_ids">
                         <list>
                             <field name="name"/>
+                            <field name="mobile"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="is_active"/>
                         </list>
@@ -136,14 +148,13 @@
                             <group>
                                 <group>
                                     <field name="name"/>
+                                    <field name="mobile"/>
+                                    <field name="icon"/>
                                     <field name="text"/>
-                                    <field name="hyperlink"/>
                                     <field name="bg_color"/>
-
-                                    
                                 </group>
                                 <group>
-                                    <field name="icon"/>
+                                    <field name="hyperlink"/>
                                     <field name="is_global"/>
                                     <field name="is_active"/>
                                 </group>
@@ -157,9 +168,9 @@
                     <field name="other_line_ids">
                         <list>
                             <field name="name"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="is_active"/>
                         </list>
@@ -167,11 +178,11 @@
                             <group>
                                 <group>
                                     <field name="name"/>
+                                    <field name="icon"/>
                                     <field name="text"/>
-                                    <field name="hyperlink"/>
                                 </group>
                                 <group>
-                                    <field name="icon"/>
+                                    <field name="hyperlink"/>
                                     <field name="is_global"/>
                                     <field name="is_active"/>
                                 </group>
@@ -185,9 +196,9 @@
                     <field name="banner_line_ids">
                         <list>
                             <field name="name"/>
+                            <field name="icon"/>
                             <field name="text"/>
                             <field name="hyperlink"/>
-                            <field name="icon"/>
                             <field name="is_global"/>
                             <field name="is_active"/>
                         </list>
@@ -195,11 +206,11 @@
                             <group>
                                 <group>
                                     <field name="name"/>
+                                    <field name="icon"/>
                                     <field name="text"/>
-                                    <field name="hyperlink"/>
                                 </group>
                                 <group>
-                                    <field name="icon"/>
+                                    <field name="hyperlink"/>
                                     <field name="is_global"/>
                                     <field name="is_active"/>
                                 </group>
